--- a/README.mdwn
+++ b/README.mdwn
@@ -202,13 +202,12 @@ because Storyboard only supports MariaDB.
 
 To deploy this system to production:
 
-    packer build -only=production database/packer_template.json
     nova boot database-mariadb \
         --key-name=$keyname \
         --flavor dc1.1x1 \
-        --image 'database-mariadb' \
-        --nic='net-id=d079fa3e-2558-4bcb-ad5a-279040c202b5,v4-fixed-ip=192.168.222.30' \
-        --security-groups default,database-mariadb
+        --image=$fedora_image_id \
+        --nic="net-id=$network_id,v4-fixed-ip=192.168.222.30" \
+        --security-groups default,database-mysql \
         --user-data ./baserock-ops-team.cloud-config
     nova volume-create \
         --display-name database-volume \
@@ -217,12 +216,26 @@ To deploy this system to production:
         100
     nova volume-attach database-mariadb <volume ID> /dev/vdb
 
-    ansible-playbook -i hosts database/instance-config.yml
+    ansible-playbook -i hosts baserock_database/image-config.yml
+    ansible-playbook -i hosts baserock_database/instance-config.yml
 
-To add the required users and databases, run the following playbook. This can
-be altered and rerun whenever you need to add more users or databases.
+At this point, if you are restoring from a backup, rsync the data across
+from your backup server on the instance, then start the mariadb service and you
+are done.
 
-    ansible-playbook -i hosts database/instance-mariadb-config.yml
+    sudo --preserve-env -- rsync --archive --chown mysql:mysql --hard-links \
+         --info=progress2 --partial --sparse \
+         root@backupserver:/srv/backup/database/* /var/lib/mysql
+    sudo systemctl enable mariadb.service
+    sudo systemctl start mariadb.service
+
+If you are starting from scratch, you need to prepare the system by adding
+the required users and databases. Run the following playbook, which can
+be altered and rerun whenever you need to add more users or databases, or
+you want to check the database configuration matches what you expect.
+
+    ansible -i hosts -m service -a 'name=mariadb enabled=true state=started'
+    ansible-playbook -i hosts baserock_database/instance-mariadb-config.yml
 
 [MariaDB]: https://www.mariadb.org
 
