baserock_mail: Update on top of Fedora 23, redeploy
The instance-config.yml script was failing to create a valid EXIM config
against the default /etc/exim.conf in Fedora 23, this is fixed now. The
regexp configuration approach is rather fragile.

Change-Id: Id1b4e3a854cb579ee58c1c4f7674415c6e8c096a

--- a/README.mdwn
+++ b/README.mdwn
@@ -229,13 +229,30 @@ you want to check the database configuration matches what you expect.
 
 ### Mail relay
 
-The mail relay is currently a Fedora Cloud 21 image running Exim. You should be
-able to take a Fedora Cloud 21 base image, instantiate it in the
-'internal-mail-relay' security group, and then run
-'baserock_mail/instance-config.yml' to configure it and start the service.
+The mail relay is currently a Fedora Cloud 23 image running Exim.
 
 It is configured to only listen on its internal IP. It's not intended to
 receive mail, or relay mail sent by systems outside the baserock.org cloud.
+
+To deploy it:
+
+    nova boot mail \
+        --key-name $keyname \
+        --flavor dc1.1x0 \
+        --image $fedora_image_id \
+        --nic "net-id=$network_id,v4-fixed-ip=192.168.222.145" \
+        --security-groups default,internal-mail-relay \
+        --user-data ./baserock-ops-team.cloud-config
+
+    ansible-playbook -i hosts baserock_mail/image-config.yml
+    ansible-playbook -i hosts baserock_mail/instance-config.yml
+
+The mail relay machine is stateless.
+
+The internal IP address of this machine is hardcoded in some places (beyond the
+usual haproxy.cfg file), use 'git grep' to find all of them. You'll need to
+update all the relevant config files. We really need some internal DNS system
+to avoid this hassle.
 
 ### OpenID provider
 
